<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <EditText
        android:id="@+id/etSubName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_the_subject_name"/>

    <EditText
        android:id="@+id/etSubDetalis"
        android:layout_below="@id/etSubName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_the_subject_details"/>

    <EditText
        android:id="@+id/etSubSyllabus"
        android:layout_below="@id/etSubDetalis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_the_syllabus_of_your_subject"/>

    <EditText
        android:id="@+id/etStartDate"
        android:layout_below="@id/etSubSyllabus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_the_date_for_starting_your_syllabus"/>

    <EditText
        android:id="@+id/etEndDate"
        android:layout_below="@id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/enter_the_date_for_ending_your_syllabus"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEndDate"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:padding="6dp"
        android:layout_marginTop="15dp"/>







</RelativeLayout>